# redlines-x

./: Cargo.toml  README.md  redlines.db
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/core/: database.rs  logger.rs  mod.rs  module_handler.rs  modules.rs  request_engine.rs  scan_result.rs  scanner.rs  session.rs  vulnerability.rs
src/modules/: mod.rs
src/modules/auxiliary/: analyzer.rs  discovery.rs  mod.rs  smart_payloads.rs  sql_injection.rs
