[package]
name = "redlines-x"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Redlines X - advanced security scanning framework"
license = "MIT"
repository = "https://github.com/abdulwahed-sweden/redlines-x"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
scraper = "0.13"
async-trait = "0.1"
regex = "1"
colored = "2"
clap = {version = "4", features = ["derive"]}
