[package]
name = "redlines-x"
version = "0.1.0"
edition = "2024"
authors = ["Abdulwahed Mansour <abdulwahed.mansour@gmail.com>"]
description = "Redlines X - advanced security scanning framework"
license = "MIT"
repository = "https://github.com/abdulwahed-sweden/redlines-x"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.29"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
clap = { version = "4", features = ["derive"] }